--- a/pom.xml
+++ b/pom.xml
@@ -17,12 +17,12 @@
         <checkstyle.base.rev>HEAD~</checkstyle.base.rev>
         <jgit.version>4.4.1.201607150455-r</jgit.version>
         <slf4j.version>1.7.25</slf4j.version>
-        <checkstyle.version>8.22</checkstyle.version>
+        <checkstyle.version>10.3.1</checkstyle.version>
         <cli.version>1.4</cli.version>
         <lombok.version>1.18.2</lombok.version>
         <junit.version>4.13.1</junit.version>
-        <mockito.version>1.10.19</mockito.version>
-        <powermock.version>1.6.6</powermock.version>
+        <mockito.version>2.23.0</mockito.version>
+        <powermock.version>2.0.2</powermock.version>
     </properties>
 
     <distributionManagement>
@@ -205,7 +205,7 @@
         </dependency>
         <dependency>
             <groupId>org.powermock</groupId>
-            <artifactId>powermock-api-mockito</artifactId>
+            <artifactId>powermock-api-mockito2</artifactId>
             <version>${powermock.version}</version>
             <scope>test</scope>
         </dependency>
